# Crack-Coding-Interview

./: README.md  README_EN.md
BaseAlgorithms/: KalmanFilter.py  kmeans.py
Basic/: CopyConstructor.cpp  Point.cpp  Point3d.cpp  opertaor-new-delete.cpp  数组地址加1.cpp
Boost/: adapter.cpp  base64.cpp  file.cpp  fopen.cpp  md5.cpp  mutex.cpp  new.cpp  offset.cpp  optional.cpp  share.cpp  thread.cpp  timer.cpp
CPP-Primer/: a.out  chapter1.cpp  chapter10.cpp  chapter12.cpp  chapter13.cpp  chapter14.cpp  chapter15.cpp  chapter2.cpp  chapter3.cpp  chapter6.cpp  chapter7.cpp  chapter8.cpp  chapter9.cpp
CS/: Hello.c  a.out
EffectiveCPP/: item10.cpp  item12.cpp  item13.cpp  item14.cpp  item15.cpp  item19.cpp  item2.cpp  item3.cpp  item4.cpp  item5.cpp  item6.cpp  item7.cpp  item9.cpp
Hog/: demoimage.cpp
Leetcode/:  Leetcode 统计表.md  Q1.cpp  Q10.cpp  Q101.cpp  Q103.cpp  Q105.cpp  Q108.cpp  Q109.cpp  Q11.cpp  Q110.cpp  Q113.cpp  Q116.cpp  Q119.cpp  Q12.cpp  Q120.cpp  Q122.cpp  Q124.cpp  Q125.cpp  Q128.cpp  Q129.cpp  (+210 more)
cv/Tracking/mystruck/src/: Config.cpp  Config.h  FeatureExtract.h  FloatRect.h  ImgProcess.h  Learner.h  Makefile  Makefile.am  Makefile.in  floatrect.cc  floatrect.h  guassiankernel.h  haarfeature.cc  haarfeature.h  haarfeatures.cc  haarfeatures.h  larank.cc  larank.cc~  larank.h  larank.h~  main.cc  main.cpp  mystruck  sampler.cc  sampler.h  track.cc  track.cc~  track.h  track.h~
cv/Tracking/mystruck/src/.deps/: Config.Po  floatrect.Po  haarfeature.Po  haarfeatures.Po  main.Po  sampler.Po  track.Po
cv/Tracking/mystruck/src/Eigen/: Makefile  Makefile.in
(+270 files in other folders)
